[gd_scene load_steps=5 format=3 uid="uid://dqbbt51uufc63"]

[ext_resource type="Script" path="res://autoload/scene_manager.gd" id="1_5kwa8"]

[sub_resource type="Animation" id="Animation_nsaph"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_d21l3"]
resource_name = "fade_to_black"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(0.136826, 0.136826, 0.136826, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6lkpd"]
_data = {
"RESET": SubResource("Animation_nsaph"),
"fade_to_black": SubResource("Animation_d21l3")
}

[node name="SceneManager" type="CanvasLayer"]
layer = 2
script = ExtResource("1_5kwa8")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6lkpd")
}

[node name="YesNoButtonBox" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_top = 504.0
offset_right = 515.0
offset_bottom = 592.0

[node name="HBoxContainer" type="HBoxContainer" parent="YesNoButtonBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 55
alignment = 1

[node name="YesButton" type="Button" parent="YesNoButtonBox/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "YSE"

[node name="NoButton" type="Button" parent="YesNoButtonBox/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "NO"
